--- a/IUNewbies/css/style.css
+++ b/IUNewbies/css/style.css
@@ -42,6 +42,11 @@ p{
 
 }
 
+.t-image {
+    position: relative; /* Declared position allows for location changes */
+    top: -20px; /* Moves the image 2px closer to the top of the page */
+}
+
 .navbar{
     background-color: #671E13 !important;
     text-transform: uppercase;
