--- a/IUNewbies/view/hoosier.html
+++ b/IUNewbies/view/hoosier.html
@@ -60,7 +60,7 @@
         <ul class=" nav-tabs list-unstyled components">
 
             <li class="nav-link js-scroll-trigger"><a href="housing.html">HOUSING</a></li>
-            <li class="nav-link js-scroll-trigger"><a href="shopping.html">SHOPPING</a></li>
+            <li class="nav-link js-scroll-trigger"><a href="shopping/shopping.html">SHOPPING</a></li>
             <li class="nav-link js-scroll-trigger"><a href="apps.html">USEFUL APPS</a></li>
             <li class="nav-link js-scroll-trigger"><a href="community.html">COMMUNITY</a></li>
             <li class="nav-link js-scroll-trigger"><a href="checklist.html">CHECK LIST</a></li>
