--- a/IUNewbies/css/style.css
+++ b/IUNewbies/css/style.css
@@ -2,74 +2,225 @@
  * Start Bootstrap - Freelancer v4.0.0-beta.2 (https://startbootstrap.com/template-overviews/freelancer)
  * Copyright 2013-2017 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-freelancer/blob/master/LICENSE)
- */body{font-family:Lato,'Helvetica Neue',Helvetica,Arial,sans-serif;overflow-x:hidden}
-p{font-size:20px}p.small{font-size:16px}a,a.active,a:active,a:focus,a:hover{color:#18bc9c;outline:0}
-h1,h2,h3,h4,h5,h6{font-family:Montserrat,'Helvetica Neue',Helvetica,Arial,sans-serif;font-weight:700;text-transform:uppercase}
-
-
-section{
-    /*padding-top: 50px;*/
-    padding:0px 0}
-section h2{font-size:3em;margin:0}
-section.success
-{
-    color:#000000;background:#ffffff
+ */
+body {
+    font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    overflow-x: hidden
 }
 
-@media (max-width:767px)
-{
-    section
-    {
-        padding:5px 0
-    }
-    section.first
-    {
-        padding-top:75px
-    }
-}.scroll-top{position:fixed;z-index:1049;right:2%;bottom:2%;width:50px;height:50px}.scroll-top .btn{font-size:16px;line-height:28px;width:50px;height:50px;text-align:center;border-radius:100%}.scroll-top .btn:focus{outline:0}#mainNav{font-family:Montserrat,'Helvetica Neue',Helvetica,Arial,sans-serif;font-weight:700;text-transform:uppercase;border:none;background:#671E13}#mainNav a:focus{outline:0}#mainNav .navbar-brand{font-size:1.1rem;color:#fff}#mainNav .navbar-brand.active,#mainNav .navbar-brand:active,#mainNav .navbar-brand:focus,#mainNav .navbar-brand:hover{color:#fff}#mainNav .navbar-nav{letter-spacing:1px}#mainNav .navbar-nav li.nav-item a.nav-link{color:#fff}#mainNav .navbar-nav li.nav-item a.nav-link:hover{color:#18bc9c;outline:0}#mainNav .navbar-nav li.nav-item a.nav-link:active,#mainNav .navbar-nav li.nav-item a.nav-link:focus{color:#fff}#mainNav .navbar-toggler{font-size:14px;padding:11px;text-transform:uppercase;color:#fff;border-color:#fff}#mainNav .navbar-toggler:focus,#mainNav .navbar-toggler:hover{color:#fff;border-color:#18bc9c;background-color:#18bc9c}@media (min-width:992px){#mainNav{padding-top:25px;padding-bottom:25px;-webkit-transition:padding-top .3s,padding-bottom .3s;-moz-transition:padding-top .3s,padding-bottom .3s;transition:padding-top .3s,padding-bottom .3s}#mainNav .navbar-brand{font-size:2em;-webkit-transition:all .3s;-moz-transition:all .3s;transition:all .3s}#mainNav .navbar-nav>li.nav-item>a.nav-link.active{color:#fff;border-radius:3px;background:#18bc9c}#mainNav .navbar-nav>li.nav-item>a.nav-link.active:active,#mainNav .navbar-nav>li.nav-item>a.nav-link.active:focus,#mainNav .navbar-nav>li.nav-item>a.nav-link.active:hover{color:#fff;background:#18bc9c}#mainNav.navbar-shrink{padding-top:10px;padding-bottom:10px}#mainNav.navbar-shrink .navbar-brand{font-size:1.5em}}
-header.masthead{padding-top:110px;padding-bottom:30px;text-align:center;color:#000000;background:#ffffff}
-header.masthead img{display:block;margin:0 auto 0px}
+p {
+    font-size: 20px
+}
 
-.img-fluid{
-    width:100%;
+p.small {
+    font-size: 16px
+}
+
+a, a.active, a:active, a:focus, a:hover {
+    color: #18bc9c;
+    outline: 0
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: Montserrat, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-weight: 700;
+    text-transform: uppercase
+}
+
+section {
+    /*padding-top: 50px;*/
+    padding: 0px 0
+}
+
+section h2 {
+    font-size: 3em;
+    margin: 0
+}
+
+section.success {
+    color: #000000;
+    background: #ffffff
+}
+
+@media (max-width: 767px) {
+    section {
+        padding: 5px 0
+    }
+
+    section.first {
+        padding-top: 75px
+    }
+}
+
+.scroll-top {
+    position: fixed;
+    z-index: 1049;
+    right: 2%;
+    bottom: 2%;
+    width: 50px;
+    height: 50px
+}
+
+.scroll-top .btn {
+    font-size: 16px;
+    line-height: 28px;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    border-radius: 100%
+}
+
+.scroll-top .btn:focus {
+    outline: 0
+}
+
+#mainNav {
+    font-family: Montserrat, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-weight: 700;
+    text-transform: uppercase;
+    border: none;
+    background: #671E13
+}
+
+#mainNav a:focus {
+    outline: 0
+}
+
+#mainNav .navbar-brand {
+    font-size: 1.1rem;
+    color: #fff
+}
+
+#mainNav .navbar-brand.active, #mainNav .navbar-brand:active, #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
+    color: #fff
+}
+
+#mainNav .navbar-nav {
+    letter-spacing: 1px
+}
+
+#mainNav .navbar-nav li.nav-item a.nav-link {
+    color: #fff
+}
+
+#mainNav .navbar-nav li.nav-item a.nav-link:hover {
+    color: #18bc9c;
+    outline: 0
+}
+
+#mainNav .navbar-nav li.nav-item a.nav-link:active, #mainNav .navbar-nav li.nav-item a.nav-link:focus {
+    color: #fff
+}
+
+#mainNav .navbar-toggler {
+    font-size: 14px;
+    padding: 11px;
+    text-transform: uppercase;
+    color: #fff;
+    border-color: #fff
+}
+
+#mainNav .navbar-toggler:focus, #mainNav .navbar-toggler:hover {
+    color: #fff;
+    border-color: #18bc9c;
+    background-color: #18bc9c
+}
+
+@media (min-width: 992px) {
+    #mainNav {
+        padding-top: 25px;
+        padding-bottom: 25px;
+        -webkit-transition: padding-top .3s, padding-bottom .3s;
+        -moz-transition: padding-top .3s, padding-bottom .3s;
+        transition: padding-top .3s, padding-bottom .3s
+    }
+
+    #mainNav .navbar-brand {
+        font-size: 2em;
+        -webkit-transition: all .3s;
+        -moz-transition: all .3s;
+        transition: all .3s
+    }
+
+    #mainNav .navbar-nav > li.nav-item > a.nav-link.active {
+        color: #fff;
+        border-radius: 3px;
+        background: #18bc9c
+    }
+
+    #mainNav .navbar-nav > li.nav-item > a.nav-link.active:active, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:focus, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover {
+        color: #fff;
+        background: #18bc9c
+    }
+
+    #mainNav.navbar-shrink {
+        padding-top: 10px;
+        padding-bottom: 10px
+    }
+
+    #mainNav.navbar-shrink .navbar-brand {
+        font-size: 1.5em
+    }
+}
+
+header.masthead {
+    padding-top: 110px;
+    padding-bottom: 30px;
+    text-align: center;
+    color: #000000;
+    background: #ffffff
+}
+
+header.masthead img {
+    display: block;
+    margin: 0 auto 0px
+}
+
+.img-fluid {
+    width: 100%;
 
     z-index: 0;
     margin-top: 0px;
     border-top: 0px;
 }
+
 /*.container{*/
 /*width:100%;*/
 /*}*/
 
-@media (min-width:768px)
-{
-    header.masthead
-    {
-        padding-top:60px;padding-bottom:30px
+.nav-bar-pos{
+    position: absolute;
+}
+
+@media (min-width: 768px) {
+    header.masthead {
+        padding-top: 60px;
+        padding-bottom: 30px
     }
-    header.masthead .intro-text .name
-    {
-        font-size:4.75em
+
+    header.masthead .intro-text .name {
+        font-size: 4.75em
     }
-    header.masthead .intro-text .skills
-    {
-        font-size:1.75em
+
+    header.masthead .intro-text .skills {
+        font-size: 1.75em
     }
 }
 
-
-.wrapper{
+.wrapper {
     display: flex;
 }
-#sidebar{
+
+#sidebar {
     padding-top: 110px;
     min-width: 300px;
-    max-width:300px;
+    max-width: 300px;
     height: auto;
     background-color: #671E13;
 }
-.wrapper a{
-    color:white;
+
+.wrapper a {
+    color: white;
     /*font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;overflow-x: hidden;*/
     font-family: Montserrat, 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-weight: 700;
@@ -77,79 +228,87 @@ header.masthead img{display:block;margin:0 auto 0px}
     text-decoration: none;
 
 }
-.wrapper a:hover{
-    color:#18bc9c;outline:0
 
+.wrapper a:hover {
+    color: #18bc9c;
+    outline: 0
 
 }
-.nav-link{
+
+.nav-link {
     display: block;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
 
 }
-.houseimage{
+
+.houseimage {
     /*width:100%;*/
     /*max-width: 100%;*/
     /*height: 200%;*/
     /*display: block;*/
-    margin-top:70px;
+    margin-top: 70px;
     margin-right: auto;
     margin-bottom: 0px;
     margin-left: auto;
 
-    padding-top:50px;
+    padding-top: 50px;
     padding-left: 10px;
     padding-bottom: 10px;
-    padding-right:10px;
+    padding-right: 10px;
 }
 
-#houses{
+#houses {
     margin-top: 120px;
     margin-bottom: 100px;
 }
-.houses img{
-    width:249px;
-    height:228px;
+
+.houses img {
+    width: 249px;
+    height: 228px;
 
 }
-.ratings img{
-    width:249px;
-    height:40px;
+
+.ratings img {
+    width: 249px;
+    height: 40px;
 }
-.contact1{
-    padding-top:110px;
-    padding-bottom:10px;
-    text-align:center;
-    color:#000000;
-    background:#ffffff
+
+.contact1 {
+    padding-top: 110px;
+    padding-bottom: 10px;
+    text-align: center;
+    color: #000000;
+    background: #ffffff
 }
-.contact1 img{
-    width:250px;
+
+.contact1 img {
+    width: 250px;
     height: 250px;
     /*display: inline-block;*/
     /*float: left;*/
 }
 
-footer{
+footer {
     text-align: center;
     /*opacity: 0.8;*/
 
     padding: 20px;
 
-    position:fixed;
-    bottom:0;
-    width:100%;
-    background-color:#671E13;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #671E13;
     /*background-image: linear-gradient(to right, #671E13 0, #671E13 100%);*/
 
 }
 
 footer {
-    background:#671E13;
+    background: #671E13;
     padding: 10px 0;
     text-align: center;
 }
+
 footer a {
     color: #70726F;
     font-size: 20px;
@@ -157,16 +316,21 @@ footer a {
     border-right: 1px solid #70726F;
     transition: all .5s ease;
 }
+
 footer a:first-child {
     border-left: 1px solid #70726F;
 }
+
 footer a:hover {
     color: white;
 }
-footer img{
+
+footer img {
     max-width: 30px;
-    max-height:30px;
+    max-height: 30px;
 }
-footer p{
+
+footer p {
     color: white;
 }
+
